deployment/Kubernetes/base/rap/rap-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rap
  name: rap
spec:
  selector:
    matchLabels:
      app: rap
  replicas: 1
  template:
    metadata:
      labels:
        app: rap
    spec:
      serviceAccountName: elevated-rights-service-account
      containers:
        - name: ampersand-rap
          ports:
            - containerPort: 80
