deployment/Kubernetes/base/rap/rap-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rap-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - rap.tarski.nl
      secretName: rap-tls
  rules:
    - host: rap.tarski.nl
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: rap
                port:
                  number: 80
